# dictation-tauri

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  aos.requirements.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.impeccable/: design.json
.pi/extensions/: aos-doctor.ts
.pi/prompts/: aos-help.md  aos-realinear.md  aos-update-os.md
.specify/: feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
admin/fixvox-web/: account-identity.mjs  admin-deploy.example.json  constelaciones-read-adapter.mjs  constelaciones-read-adapter.test.mjs  constelaciones-read-broker.mjs  pi-admin-deploy-broker.mjs  (+26 more)
docs/: ASSISTANT_RULES.md  DECISIONS.md  DEVELOPMENT.md  GLOSSARY.md  OPEN_QUESTIONS.md  PROJECT.md  README.md  TOPICS.md  WORKING_MEMORY.md
plans/: aos-autonomous-checkpoint-loop.md  spec-019-checkpoint-b-execution.md
scripts/: action-hotkeys-physical-smoke.ps1  admin-web-deploy.ps1  admin-web-local.ps1  admin-web-pi-chat-shell-smoke.mjs  admin-web-prod.ps1  admin-web-profile-editor-smoke.mjs  admin-web-ui-smoke.mjs  agent-context-audit.ts  aos-doctor.ts  audio-mute-cues-smoke.ps1  auto-stop-silence-smoke.ps1  cdp-evaluate.mjs  check-skills-junction.ts  cloud-deploy.ps1  cloud-dev-local.ps1  context-index.ts  context-refresh.ts  desktop-dictation-e2e.ps1  desktop-hotkey-smoke.ps1  dev-dock.ps1  dock-companion-smoke.ps1  fixvox-admin.mjs  fixvox-api-local.ps1  fixvox-managed-smoke.ts  fixvox-real-provider-smoke.ps1  hotkey-reregistration-smoke.ps1  microphone-capture.ts  packaged-clean-smoke.ps1  pi-release-provision.ps1  pi-remote-agent-apply.sh  pi-remote-agent-rollout.ps1  pi-remote-agent-rpc-smoke.mjs  release-windows.ps1  runtime-transcription.ts  selection-browser-smoke.ps1  selection-capture-smoke.ps1  smoke-dock.ps1  start-tauri-dev-hidden.ps1  synthetic-audio-stt.ts  tauri-onboarding-capture.mjs  (+2 more)
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: companion_window.rs  desktop_control.rs  desktop_delivery.rs  dock_shell.rs  fixvox_cloud.rs  lib.rs  main.rs  native_capture.rs  output_mute.rs  result_history.rs  runtime_transcription.rs  selection_capture.rs  selection_presets.rs  settings_window.rs  startup_launch.rs  startup_smoke.rs  tray.rs  user_preferences.rs
src-tauri/tests/: fixvox_cloud_contract.rs
tests/: aos-doctor.test.mjs
types/: aos-runtime.d.ts
(+581 files in other folders)
