[package]
name = "dictation-tauri"
version = "0.1.0"
description = "A desktop dictation app foundation built with Tauri."
authors = ["JP"]
edition = "2021"
default-run = "dictation-tauri"
autobins = false

[lib]
name = "dictation_tauri_lib"
crate-type = ["rlib"]

[[bin]]
name = "dictation-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
cpal = "0.15"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
