[package]
name = "dictation-tauri"
version = "0.1.0"
description = "A desktop dictation app foundation built with Tauri."
authors = ["JP"]
edition = "2021"
default-run = "dictation-tauri"
autobins = false

[lib]
name = "dictation_tauri_lib"
crate-type = ["rlib"]

[[bin]]
name = "dictation-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon", "unstable"] }
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
